2006-10-03 [backports]	2.5.2cvs1

	* configure.ac
		open the stable_2_5 branch

2006-09-26 [colin]	2.5.2

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.2 released

2006-09-26 [colin]	2.5.1cvs5

	* src/matcher.c
		Fix condition

2006-09-26 [colin]	2.5.1cvs4

	* src/mbox.c
		Revert cvs1 (useless as the message is printed 
		every 500 mails)

2006-09-26 [colin]	2.5.1cvs3

	* src/partial_download.c
		Fix crasher found by Alexsandar Urosevic

2006-09-26 [colin]	2.5.1cvs2

	* src/summaryview.c
		Fix bug #1023 (Sylpheed deletes too much messages)

2006-09-26 [ticho]	2.5.1cvs1

	* src/mbox.c
		Make use of gettext's multiple plurals for statusbar
		progress message.

2006-09-25 [paul]	2.5.1

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.1 released

2006-09-25 [colin]	2.5.0cvs3

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		BogoFilter, Spamassassin: Fix double hook registering after
		visiting preferences
		Spamassassin, Clamav: Just set the mails to move instead of
		doing the move - caller will move the things at once.

2006-09-25 [colin]	2.5.0cvs2

	* src/imap.c
	* src/etpan/imap-thread.c
		Use UID SEARCH ALL instead of UID 1:*
		(braindead servers can't figure out that's
		the same...)

2006-09-25 [wwp]	2.5.0cvs1

	* src/message_search.c
		Added the ability to stop a running search (in message body).

2006-09-25 [paul]	2.5.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.0 released

2006-09-25 [paul]	2.4.0cvs214

	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
		updated by Tim, Stephan Sachse, Flammie Pirinen,
		Fabien Vantard, Tim Dijkstra, Frederico Goncalves Guimaraes,
		Ticho, Aleksander Urosevic, Ralgh Young

2006-09-24 [mones]	2.4.0cvs213

	* po/es.po
		Updated for release

2006-09-23 [colin]	2.4.0cvs212

	* src/gtk/inputdialog.c
		Fix [ ] remember this appearing in normal
		input dialogs after it's been used by
		mimeview.
	* src/folder.c